# scorpio_zadanie_rekrutacyjne_software

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: cube_detector_node.cpp  ilmenite_check_node.cpp
